DELETE swagger fix, anonymization_methods change, new endpints in extrnal API
